<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background1"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Animal Memory"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="40dp"
            android:layout_margin="20dp"
            android:textColor="#1b2397"
            android:visibility="gone" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp"
            android:background="@drawable/number_hint">
            <Button
                android:id="@+id/btNewGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/menu_item"
                android:onClick="btClick"
                android:text="@string/new_game"
                android:typeface="monospace" />
            <Button
                android:id="@+id/btContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/menu_item"
                android:onClick="btClick"
                android:text="@string/continue_game"
                android:typeface="monospace" />
            <Button
                android:id="@+id/btGetMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/menu_item"
                android:onClick="btClick"
                android:text="@string/get_more"
                android:typeface="monospace" />
            <Button
                android:id="@+id/btAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/menu_item"
                android:onClick="btClick"
                android:text="@string/about_game"
                android:typeface="monospace" />
            <Button
                android:id="@+id/btExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold"
                android:background="@drawable/menu_item"
                android:onClick="btClick"
                android:text="@string/exit_game"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
